examples/alert-manager/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-example
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: web
  selector:
    alertmanager: example
